...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
...
                android:hint="Username or Email"
                android:inputType="textEmailAddress"
                android:background="@drawable/unfilled_btn"
                android:drawableLeft="@drawable/ic_baseline_person_outline_24"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
...
                android:hint="Password"
                android:inputType="textPassword"
                android:background="@drawable/unfilled_btn"
                android:drawableLeft="@drawable/ic_baseline_vpn_key_24"/>

            <Button
                android:id="@+id/signin"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="10dp"
                android:text="Sign in"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/filled_btn"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
...
