<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/screen_background"
    android:weightSum="10"
    android:gravity="center"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_weight="3"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:src="@mipmap/logo_foreground"/>

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn1"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:textColor="#FFF"
            android:text="Sign in"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/unfilled_btn"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif"
            android:text="Register"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/filled_btn"/>
    </LinearLayout>

</LinearLayout>